# gedit-searchafter3letters

./: NEWS  README.md  gedit.doap  meson.build  meson_options.txt
build-aux/flatpak/: org.gnome.gedit.yml
build-aux/snap/: snapcraft.yaml
data/: gedit.1  meson.build  org.gnome.gedit.appdata.xml.in  org.gnome.gedit.gschema.xml.in
docs/: gedit-development-getting-started.md  roadmap.md
docs/reference/: api-breaks.xml  gedit-sections.txt  meson.build
gedit/: gedit-app-private.h  gedit-app.c  gedit-commands-file.c  gedit-commands-help.c  gedit-document-private.h  gedit-document.c  gedit-document.h  gedit-documents-panel.c  gedit-file-chooser-dialog-gtk.c  gedit-file-chooser-dialog.c  gedit-file-chooser-dialog.h  gedit-io-error-info-bar.c  gedit-metadata-manager.c  gedit-open-document-selector-helper.c  gedit-open-document-selector-helper.h  gedit-open-document-selector-store.c  gedit-open-document-selector.c  gedit-pango.c  gedit-preferences-dialog.c  gedit-print-job.c  gedit-settings.c  gedit-settings.h  gedit-tab.c  gedit-utils.c  gedit-utils.h  gedit-view-frame.c  gedit-view.c  gedit-view.h  gedit-window-private.h  gedit-window.c  gedit.c  meson.build
gedit/resources/: gedit.gresource.xml.in
gedit/resources/ui/: gedit-window.ui
help/: meson.build
help/C/: gedit-character-encodings.page  gedit-printing-order.page  gedit-printing-select.page  gedit-printing.page  index.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
plugins/: list-of-gedit-plugins.md  meson.build
plugins/filebrowser/: gedit-file-browser-store.c
plugins/openlinks/: gedit-open-links-plugin.c  gedit-open-links-plugin.h  meson.build  openlinks.plugin.desktop.in
plugins/openlinks/unit-tests/: meson.build  test-open-links.c
po/: POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  kk.po  ko.po  lt.po  lv.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
